Arrumando arquivos e inicio do DOM

--- a/html/ex2.html
+++ b/html/ex2.html
@@ -8,10 +8,10 @@
 </head>
 <body>
         <header>
-            <h1>Primeiro Site com JS</h1>   
+            <h1>Segundo Site com JS</h1>   
         </header>
         <main>
-            <p>Olá, Mundo</p>
+            <p>Soma</p>
         </main>
 </body>
     <script>
