--- a/html/ex4.html
+++ b/html/ex4.html
@@ -8,17 +8,14 @@
 </head>
 <body>
         <header>
-            <h1>Terceiro Site com JS</h1>   
+            <h1>Quarto Site com JS</h1>   
         </header>
         <main>
-            <p>document</p>
+            <p>DOM</p>
         </main>
 </body>
     <script>
         //to fix e to locale
-        var nome = window.prompt("Qual seu nome")
-        document.write('Seu nome é ' + nome)
-        document.write('Seu nome tem ' + nome.length + ' letras')
         
 
     </script>
