--- a/html/ex4.html
+++ b/html/ex4.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/ex1.css">
-    <title>Document</title>
+    <title>site com DOM</title>
 </head>
 <body>
         <header>
             <h1>Quarto Site com JS</h1>   
         </header>
         <main>
-            <p>DOM</p>
+            <p>site com <strong>DOM</strong></p>
         </main>
 </body>
     <script>
-        //to fix e to locale
-        
+        var cop = window.document.body 
+        cop.style.background = 'none'
+        var p1 = window.document.getElementsByTagName('p')[0]
+        window.document.write(p1.innerText)
+        p1.style.color ='blue'
+        window.document.write(p1.innerHTML)
+        p1.style.color ='blue'
 
     </script>
 
