Primeiro site, com alguns bugs a resolver

--- a/html/ex8.html
+++ b/html/ex8.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/ex8.css">
 </head>
-<body>
+<body onload="carga()">
     <header>
         <h1>Oi</h1>
     </header>
     <section>
-        <article></article>
-        <article></article>
+        <article id="msg">
+           <p>Mensagem</p> 
+        </article>
+        <article id="foto">
+            <img id="imagem" src="../images/Manhã.png">
+        </article>
         <article></article>
     </section>
     <footer>Desenvolvido por @Pedro</footer>
+    <script src="../js/exercicio.js"></script>
 </body>
 </html>
