Resolvido os conflitos

--- a/html/ex8.html
+++ b/html/ex8.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/ex8.css">
+    <title>Dynamic Time-based Content</title>
 </head>
 <body onload="carga()">
     <header>
         <h1>Oi</h1>
     </header>
     <section>
-        <article id="msg">
-           <p>Mensagem</p> 
+        <article id="msg"> 
         </article>
-        <article id="foto">
-            <img id="imagem" src="../images/Manhã.png">
+        <article>
+            <img id="imagem" src="../images/Manhã.png" alt="Imagem baseada no tempo">
         </article>
-        <article></article>
     </section>
     <footer>Desenvolvido por @Pedro</footer>
     <script src="../js/exercicio.js"></script>
