--- a/html/ex9.html
+++ b/html/ex9.html
@@ -10,17 +10,17 @@
     <h1>Verificador de Idade</h1>
     <section>
         <article id="1">
-            <form>  
+            <form>
                 <p>
                     <label for="idade">Ano de Nascimento:</label><input type="number" name="idade" id="idade">
                 </p>
-            <fieldset>
-                <legend>Sexo</legend>
-                <p>
-                    <input type="radio" name="rad_sexo" id="masc"><label for="masc"> Masculino</label><br>
-                    <input type="radio" name="rad_sexo" id="fem"><label for="fem"> Feminino</label>
-                </p>
-            </fieldset>
+                <fieldset>
+                    <legend>Sexo</legend>
+                    <p>
+                        <input type="radio" name="rad_sexo" id="masc" value="masculino"><label for="masc"> Masculino</label><br>
+                        <input type="radio" name="rad_sexo" id="fem" value="feminino"><label for="fem"> Feminino</label>
+                    </p>
+                </fieldset>
                 <p>
                     <input type="button" value="Verificar" onclick="verificador_de_idade()">
                 </p>
